# bac

./: .gitignore  AGENTS.md  CLAUDE.md  PPT.md  README.md  demo.py  pyproject.toml  render.yaml  requirements.txt
.claude/: README.md
rag/docs/: fiber_network_rag_knowledge_base.md  wireless_backhaul_5g_rag.md
src/: README.md
src/agents/: observer.py
src/api/: README.md  main.py
src/causal/: causal_engine.py
src/evaluation/: README.md  evaluate.py  generate_dataset.py  report.txt
src/models/: schemas.py
src/models/llm_finetune/: __init__.py  train_lora.py
src/simulator/: anomaly_injector.py  engine.py  telemetry.py  test_simulator.py  topology.py
src/ui/dashboard/: README.md
src/ui/dashboard/src/components/: README.md
src/utils/: logger.py
