[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentic-network-ops"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "langchain",
    "langgraph",
    "langchain-openai",
    "langchain-community",
    "openai",
    "pgmpy",
    "z3-solver",
    "networkx",
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
    "matplotlib",
    "seaborn",
    "pydantic",
    "loguru",
    "python-dotenv",
    "httpx",
    "faiss-cpu",
    "prophet",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
